<resources>
    <string name="app_name">Assignment2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_product">addProduct</string>
    <string name="name">Name:</string>
    <string name="descrip">Description:</string>
    <string name="price">Price (CAD):</string>
    <string name="pricebtc">Price (BTC):</string>
    <string name="add">Add New Product</string>
    <string name="next">Next</string>
    <string name="del">Delete</string>
    <string name="prev">Prev</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
